added color columns to shelter

--- a/in_progress/shelter/submission.ipynb
+++ b/in_progress/shelter/submission.ipynb
@@ -599,6 +599,445 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Black/White',\n",
+       " 'Black',\n",
+       " 'Brown Tabby',\n",
+       " 'White',\n",
+       " 'Brown Tabby/White',\n",
+       " 'Brown/White',\n",
+       " 'Orange Tabby',\n",
+       " 'Tan/White',\n",
+       " 'Tricolor',\n",
+       " 'Blue/White',\n",
+       " 'Black/Tan',\n",
+       " 'White/Black',\n",
+       " 'Tan',\n",
+       " 'Brown',\n",
+       " 'White/Brown',\n",
+       " 'Tortie',\n",
+       " 'Calico',\n",
+       " 'Blue',\n",
+       " 'Brown Brindle/White',\n",
+       " 'Orange Tabby/White',\n",
+       " 'Black/Brown',\n",
+       " 'Blue Tabby',\n",
+       " 'White/Tan',\n",
+       " 'Brown/Black',\n",
+       " 'Torbie',\n",
+       " 'Red/White',\n",
+       " 'Red',\n",
+       " 'Brown Brindle',\n",
+       " 'Blue Tabby/White',\n",
+       " 'Chocolate/White',\n",
+       " 'Cream Tabby',\n",
+       " 'Sable',\n",
+       " 'Yellow',\n",
+       " 'Buff',\n",
+       " 'Lynx Point',\n",
+       " 'Tan/Black',\n",
+       " 'Cream',\n",
+       " 'Chocolate',\n",
+       " 'Seal Point',\n",
+       " 'White/Blue',\n",
+       " 'White/Brown Brindle',\n",
+       " 'Fawn/White',\n",
+       " 'White/Brown Tabby',\n",
+       " 'Gray/White',\n",
+       " 'Cream Tabby/White',\n",
+       " 'Sable/White',\n",
+       " 'Flame Point',\n",
+       " 'Gray',\n",
+       " 'Blue Merle',\n",
+       " 'Fawn',\n",
+       " 'Black Brindle/White',\n",
+       " 'Red/Black',\n",
+       " 'Chocolate/Tan',\n",
+       " 'Brown/Tan',\n",
+       " 'Torbie/White',\n",
+       " 'White/Red',\n",
+       " 'Black Smoke',\n",
+       " 'White/Gray',\n",
+       " 'Yellow/White',\n",
+       " 'Gold',\n",
+       " 'White/Orange Tabby',\n",
+       " 'Buff/White',\n",
+       " 'White/Tricolor',\n",
+       " 'Black Tabby',\n",
+       " 'Cream/White',\n",
+       " 'Blue Merle/White',\n",
+       " 'Black/Brown Brindle',\n",
+       " 'Black/Tricolor',\n",
+       " 'Black/Gray',\n",
+       " 'Lilac Point',\n",
+       " 'White/Chocolate',\n",
+       " 'White/Buff',\n",
+       " 'White/Cream',\n",
+       " 'Brown Merle',\n",
+       " 'Blue/Tan',\n",
+       " 'Gray Tabby',\n",
+       " 'Brown Merle/White',\n",
+       " 'White/Orange',\n",
+       " 'Blue Point',\n",
+       " 'Tortie Point',\n",
+       " 'Silver Tabby',\n",
+       " 'Tortie/White',\n",
+       " 'Red/Tan',\n",
+       " 'Orange/White',\n",
+       " 'Blue Merle/Tan',\n",
+       " 'Black Brindle',\n",
+       " 'Red Merle',\n",
+       " 'Apricot',\n",
+       " 'Calico Point',\n",
+       " 'Black Tabby/White',\n",
+       " 'Calico/White',\n",
+       " 'Silver/Tan',\n",
+       " 'Red Merle/White',\n",
+       " 'Red Tick',\n",
+       " 'Seal Point/White',\n",
+       " 'Sable/Tan',\n",
+       " 'Gray/Black',\n",
+       " 'Tan/Brown',\n",
+       " 'Tricolor/White',\n",
+       " 'White/Blue Tabby',\n",
+       " 'Fawn/Black',\n",
+       " 'Yellow Brindle/White',\n",
+       " 'Black/Red',\n",
+       " 'Blue Tick',\n",
+       " 'Silver',\n",
+       " 'Gold/White',\n",
+       " 'Black Smoke/White',\n",
+       " 'Chocolate Point',\n",
+       " 'Orange',\n",
+       " 'Tan/Gray',\n",
+       " 'Gray/Tan',\n",
+       " 'Yellow Brindle',\n",
+       " 'Lynx Point/White',\n",
+       " 'Gray Tabby/White',\n",
+       " 'Red Tick/White',\n",
+       " 'Blue Cream',\n",
+       " 'Cream/Black',\n",
+       " 'Black/Cream',\n",
+       " 'Liver/White',\n",
+       " 'Tan/Cream',\n",
+       " 'Silver Tabby/White',\n",
+       " 'White/White',\n",
+       " 'Buff/Tan',\n",
+       " 'Tan/Silver',\n",
+       " 'Sable/Black',\n",
+       " 'Black/Blue Merle',\n",
+       " 'Brown/Tricolor',\n",
+       " 'White/Liver',\n",
+       " 'White/Black Brindle',\n",
+       " 'Blue Tick/Black',\n",
+       " 'White/Blue Merle',\n",
+       " 'Brown Brindle/Black',\n",
+       " 'Red/Brown',\n",
+       " 'Tricolor/Black',\n",
+       " 'Tan/Buff',\n",
+       " 'Brown Tabby/Black',\n",
+       " 'Blue Merle/Black',\n",
+       " 'Blue Tiger/White',\n",
+       " 'Buff/Black',\n",
+       " 'Tortie/Blue Cream',\n",
+       " 'Black/Silver',\n",
+       " 'Black/Orange',\n",
+       " 'Sable/Brown',\n",
+       " 'White/Red Tick',\n",
+       " 'Blue Merle/Brown',\n",
+       " 'Black/Buff',\n",
+       " 'Brown/Gray',\n",
+       " 'Cream/Tan',\n",
+       " 'Brown/Red',\n",
+       " 'Calico/Black',\n",
+       " 'Black/Blue Tick',\n",
+       " 'Tricolor/Brown',\n",
+       " 'White/Brown Merle',\n",
+       " 'Tan/Tan',\n",
+       " 'Chocolate/Brown',\n",
+       " 'Blue Smoke',\n",
+       " 'Red/Cream',\n",
+       " 'White/Silver',\n",
+       " 'Chocolate Point/White',\n",
+       " 'Blue Tick/Tan',\n",
+       " 'Black/Black Brindle',\n",
+       " 'Blue Cream/White',\n",
+       " 'Silver/Black',\n",
+       " 'Liver/Tan',\n",
+       " 'White/Yellow Brindle',\n",
+       " 'Silver/White',\n",
+       " 'White/Cream Tabby',\n",
+       " 'Brown/Cream',\n",
+       " 'Fawn/Blue',\n",
+       " 'Apricot/White',\n",
+       " 'Gray/Brown',\n",
+       " 'Silver/Brown',\n",
+       " 'White/Black Tabby',\n",
+       " 'Blue/Black',\n",
+       " 'Black/Black',\n",
+       " 'Black Brindle/Brown',\n",
+       " 'Gray/Silver',\n",
+       " 'White/Red Merle',\n",
+       " 'Chocolate/Tricolor',\n",
+       " 'Brown/Brown',\n",
+       " 'Blue/Cream',\n",
+       " 'Blue Tick/Red Tick',\n",
+       " 'Brown/Buff',\n",
+       " 'Tan/Blue',\n",
+       " 'Chocolate/Black Smoke',\n",
+       " 'Brown Tabby/Orange',\n",
+       " 'Tricolor/Tan',\n",
+       " 'Blue Point/White',\n",
+       " 'Blue Tick/Brown',\n",
+       " 'Fawn/Tan',\n",
+       " 'Tortie/Orange',\n",
+       " 'Calico/Tricolor',\n",
+       " 'White/Apricot',\n",
+       " 'Tan/Red',\n",
+       " 'Silver Lynx Point',\n",
+       " 'Black/Yellow Brindle',\n",
+       " 'White/Pink',\n",
+       " 'Black/Black Smoke',\n",
+       " 'Liver Tick',\n",
+       " 'Cream/Gray',\n",
+       " 'Gray/Cream',\n",
+       " 'Buff/Gray',\n",
+       " 'Silver/Chocolate',\n",
+       " 'Brown Brindle/Tan',\n",
+       " 'White/Blue Cream',\n",
+       " 'White/Lynx Point',\n",
+       " 'Chocolate/Red',\n",
+       " 'Calico/Brown Tabby',\n",
+       " 'Brown/Silver',\n",
+       " 'Tricolor/Blue',\n",
+       " 'Red Tick/Red',\n",
+       " 'Blue Tick/White',\n",
+       " 'Seal Point/Brown',\n",
+       " 'Blue/Brown Brindle',\n",
+       " 'Black/Blue',\n",
+       " 'Black/Chocolate',\n",
+       " 'Blue Tiger',\n",
+       " 'Tortie/Black',\n",
+       " 'Brown Tiger',\n",
+       " 'Red/Red Tick',\n",
+       " 'Blue Merle/Tricolor',\n",
+       " 'Tricolor/Blue Merle',\n",
+       " 'Gold/Black',\n",
+       " 'Brown Brindle/Red Tick',\n",
+       " 'Calico Point/White',\n",
+       " 'White/Chocolate Point',\n",
+       " 'Sable/Cream',\n",
+       " 'White/Gold',\n",
+       " 'White/Calico',\n",
+       " 'Red Tick/Tan',\n",
+       " 'White/Gray Tabby',\n",
+       " 'Lilac Point/White',\n",
+       " 'Red/Red Merle',\n",
+       " 'Black Tiger/White',\n",
+       " 'Cream/Brown',\n",
+       " 'Apricot/Brown',\n",
+       " 'White/Blue Tick',\n",
+       " 'Gold/Gold',\n",
+       " 'Black/Brown Merle',\n",
+       " 'Red/Gray',\n",
+       " 'Brown Merle/Tan',\n",
+       " 'Pink',\n",
+       " 'White/Yellow',\n",
+       " 'Brown/Red Tick',\n",
+       " 'Gold/Yellow',\n",
+       " 'Yellow/Gray',\n",
+       " 'Sable/Red',\n",
+       " 'Liver',\n",
+       " 'Blue Tabby/Blue Cream',\n",
+       " 'Brown Merle/Black',\n",
+       " 'Brown Tabby/Gray',\n",
+       " 'Brown Brindle/Brown',\n",
+       " 'Chocolate/Black',\n",
+       " 'Sable/Buff',\n",
+       " 'Agouti',\n",
+       " 'Tortie Point/White',\n",
+       " 'Brown Tabby/Tortie',\n",
+       " 'Brown Tabby/Brown',\n",
+       " 'Red Merle/Black',\n",
+       " 'Cream/Red',\n",
+       " 'Brown/Chocolate',\n",
+       " 'Orange/Tan',\n",
+       " 'Gold/Tan',\n",
+       " 'Blue/Yellow Brindle',\n",
+       " 'Tricolor/Silver',\n",
+       " 'Tricolor/Brown Merle',\n",
+       " 'Blue Merle/Blue Merle',\n",
+       " 'Tricolor/Chocolate',\n",
+       " 'Blue Tick/Red',\n",
+       " 'Calico/Brown',\n",
+       " 'Tan/Gold',\n",
+       " 'Buff/Yellow',\n",
+       " 'Tortie/Calico',\n",
+       " 'Brown Brindle/Blue Tick',\n",
+       " 'Red/Buff',\n",
+       " 'Chocolate/Cream',\n",
+       " 'Fawn/Brown',\n",
+       " 'Blue/Tricolor',\n",
+       " 'Red Tick/Brown',\n",
+       " 'Red/Tricolor',\n",
+       " 'Sable/Gray',\n",
+       " 'Orange Tabby/Orange',\n",
+       " 'White/Gray Tiger',\n",
+       " 'Blue Tabby/Cream',\n",
+       " 'Chocolate/Brown Merle',\n",
+       " 'Black Smoke/Brown Tabby',\n",
+       " 'Tan/Yellow',\n",
+       " 'Blue Tabby/Orange',\n",
+       " 'Blue Merle/Gray',\n",
+       " 'Calico/Blue Cream',\n",
+       " 'Brown Brindle/Brown Brindle',\n",
+       " 'Brown/Blue Smoke',\n",
+       " 'Blue/Gray',\n",
+       " 'Tricolor/Tricolor',\n",
+       " 'Blue Merle/Cream',\n",
+       " 'Red Tick/Brown Merle',\n",
+       " 'Blue Cream/Blue Tabby',\n",
+       " 'Brown Brindle/Blue',\n",
+       " 'Red/Gold',\n",
+       " 'Tan/Red Tick',\n",
+       " 'Brown Tabby/Gray Tabby',\n",
+       " 'Brown Merle/Brown',\n",
+       " 'White/Black Smoke',\n",
+       " 'Liver Tick/White',\n",
+       " 'Apricot/Tricolor',\n",
+       " 'Blue Merle/Red',\n",
+       " 'Black Tabby/Orange',\n",
+       " 'Blue Tabby/Tan',\n",
+       " 'Orange/Orange Tabby',\n",
+       " 'Blue Merle/Brown Brindle',\n",
+       " 'Gray/Buff',\n",
+       " 'Blue Tabby/Black',\n",
+       " 'Brown/Blue',\n",
+       " 'Brown Merle/Blue Merle',\n",
+       " 'Gold/Cream',\n",
+       " 'Tan/Tricolor',\n",
+       " 'Brown/Red Merle',\n",
+       " 'Yellow Brindle/Tan',\n",
+       " 'Blue Cream/Blue Tiger',\n",
+       " 'Cream/Red Tick',\n",
+       " 'Red/Red',\n",
+       " 'Fawn/Gray',\n",
+       " 'Tortie/Brown',\n",
+       " 'Fawn/Tricolor',\n",
+       " 'Blue Cream/Buff',\n",
+       " 'Silver Tabby/Black',\n",
+       " 'Gray/Blue',\n",
+       " 'Silver/Cream',\n",
+       " 'Blue Merle/Red Merle',\n",
+       " 'Sable/Red Merle',\n",
+       " 'Yellow/Black',\n",
+       " 'Lynx Point/Gray Tabby',\n",
+       " 'White/Brown Tiger',\n",
+       " 'Gray/Tricolor',\n",
+       " 'Black/Silver Tabby',\n",
+       " 'Gray Tabby/Black',\n",
+       " 'Brown/Brown Brindle',\n",
+       " 'Gray/Red',\n",
+       " 'Lynx Point/Brown Tabby',\n",
+       " 'Black/Yellow',\n",
+       " 'Blue Cream/Tortie',\n",
+       " 'Blue/Brown',\n",
+       " 'Tan/Yellow Brindle',\n",
+       " 'Orange Tiger',\n",
+       " 'Sable/Silver',\n",
+       " 'Silver/Red',\n",
+       " 'Black Brindle/Blue Tick',\n",
+       " 'Fawn/Chocolate',\n",
+       " 'Black Tabby/Black',\n",
+       " 'White/Flame Point',\n",
+       " 'Torbie/Blue Cream',\n",
+       " 'Cream/Orange',\n",
+       " 'Torbie/Calico',\n",
+       " 'Flame Point/White',\n",
+       " 'Chocolate/Gray',\n",
+       " 'Yellow/Yellow',\n",
+       " 'Yellow/Tan',\n",
+       " 'Brown Brindle/Brown Merle',\n",
+       " 'Tricolor/Calico',\n",
+       " 'Blue Tick/Brown Brindle',\n",
+       " 'Brown/Black Tabby',\n",
+       " 'Red Merle/Tan',\n",
+       " 'Tricolor/Blue Tick',\n",
+       " 'Blue/Calico',\n",
+       " 'Orange Tabby/Black',\n",
+       " 'Liver/Buff',\n",
+       " 'Yellow Brindle/Blue',\n",
+       " 'Gold/Buff',\n",
+       " 'Black/Black Tabby',\n",
+       " 'Agouti/Brown Tabby',\n",
+       " 'Torbie/Brown',\n",
+       " 'Orange Tabby/Apricot',\n",
+       " 'Chocolate/Gold',\n",
+       " 'Orange Tabby/Tortie Point',\n",
+       " 'Black/Tortie',\n",
+       " 'Tortie Point/Lynx Point',\n",
+       " 'Red/Silver',\n",
+       " 'Black Brindle/Brown Brindle',\n",
+       " 'Blue Smoke/White',\n",
+       " 'Tortie/Black Smoke',\n",
+       " 'Tan/Brown Brindle',\n",
+       " 'Lilac Point/Cream',\n",
+       " 'Blue/Tortie',\n",
+       " 'Brown Tiger/White',\n",
+       " 'Red Tick/Black',\n",
+       " 'Blue Smoke/Brown',\n",
+       " 'Tan/Apricot',\n",
+       " 'Ruddy/Cream',\n",
+       " 'Fawn/Brown Brindle',\n",
+       " 'Buff/Red',\n",
+       " 'Gray/Gold',\n",
+       " 'Brown/Black Brindle',\n",
+       " 'Buff/Brown',\n",
+       " 'Chocolate/Red Tick',\n",
+       " 'Brown Brindle/Blue Cream',\n",
+       " 'Calico/Blue Tabby',\n",
+       " 'Brown/Brown Merle',\n",
+       " 'Blue/Orange',\n",
+       " 'Chocolate/Brown Brindle',\n",
+       " 'Cream/Seal Point',\n",
+       " 'Tan/Brown Merle',\n",
+       " 'Red/Blue',\n",
+       " 'Liver/Brown Brindle',\n",
+       " 'Brown Tabby/Black Brindle',\n",
+       " 'Black Brindle/Black',\n",
+       " 'Red Tick/Blue Tick',\n",
+       " 'Buff/Cream',\n",
+       " 'White/Seal Point',\n",
+       " 'Calico/Orange Tabby',\n",
+       " 'Gray/Tortie',\n",
+       " 'Black Smoke/Black']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(full.Color.value_counts().index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
