--- a/in_progress/census/numeric_focus.ipynb
+++ b/in_progress/census/numeric_focus.ipynb
@@ -265,7 +265,7 @@
    "source": [
     "### Removing missing values\n",
     "\n",
-    "This removes _ rows from a dataset with _ rows."
+    "This removes 1274 rows from a dataset with 74001 rows."
    ]
   },
   {
