fixed the corr plot for race analysis

--- a/in_progress/census/fun.ipynb
+++ b/in_progress/census/fun.ipynb
@@ -1029,7 +1029,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1060,13 +1062,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Low commute times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "326 201\n"
+     ]
+    }
+   ],
+   "source": [
+    "high_times = census[census.MeanCommute > 40]\n",
+    "low_times  = census[census.MeanCommute < 10]\n",
+    "print(len(high_times.groupby([\"State\", \"County\"])), len(low_times.groupby([\"State\", \"County\"])))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "trans = ['Drive', 'Carpool', 'Transit', 'Walk', 'OtherTransp']\n",
+    "for tran in trans:\n",
+    "    ax3.bar(counties.index, counties[race], label=race)\n",
+    "ax3.legend()"
+   ]
   }
  ],
  "metadata": {
