look at num counties in each state

--- a/in_progress/census/fun.ipynb
+++ b/in_progress/census/fun.ipynb
@@ -1065,7 +1065,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Commute times"
+    "### Commute times\n",
+    "\n",
+    "WARNING: barplots take around 1min to load on my laptop"
    ]
   },
   {
@@ -1117,6 +1119,24 @@
     "  \n",
     "_ = plt.legend(bbox_to_anchor=(0.3, 0.3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
