hopefully fixed format errors

--- a/in_progress/census/race_focus.ipynb
+++ b/in_progress/census/race_focus.ipynb
@@ -12,6 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| <img src=\"photos/race_county_1.png\" alt=\"Highest Black population\" style=\"height:48%; display: inline-block; vertical-align: middle;\"/><img src=\"photos/race_county_2.png\" alt=\"Highest Hispanic population\" style=\"height:48%; display: inline-block; vertical-align: middle;\"/> | \n",
+    "|:--:| \n",
+    "| *Highest Black and Hispanic populations (have you ever heard of Cook, Illinois?)* | "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
