fix bug in format of subchapter table of contents

--- a/in_progress/census/race_focus.ipynb
+++ b/in_progress/census/race_focus.ipynb
@@ -12,6 +12,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table of contents\n",
+    "1. [Introduction](#introduction)\n",
+    "\n",
+    "2. [Some paragraph](#paragraph1)\n",
+    "    1. [Sub paragraph](#subparagraph1)\n",
+    "3. [Another paragraph](#paragraph2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
