when the hardest thing is putting English on the readme

--- a/in_progress/census/race_focus.ipynb
+++ b/in_progress/census/race_focus.ipynb
@@ -19,8 +19,31 @@
     "1. [Introduction](#introduction)\n",
     "\n",
     "2. [Some paragraph](#paragraph1)\n",
-    "    1. [Sub paragraph](#subparagraph1)\n",
+    "\n",
+    "    - [Sub paragraph](#subparagraph1)\n",
+    "    \n",
     "3. [Another paragraph](#paragraph2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table of Contents\n",
+    "\n",
+    "1.) [Introduction](#intro)\n",
+    "\n",
+    "    - [Background](#background)\n",
+    "\n",
+    "   - [Tracts](#tracts)\n",
+    "\n",
+    "   - [Questionnaire](#questionnaire)\n",
+    "\n",
+    "   - [Dataset](#dataset)\n",
+    "\n",
+    "2.) [State Focus](#state)\n",
+    "\n",
+    "3.) [Racial Focus](#race)"
    ]
   },
   {
