quick analysis of nation as a whole

--- a/in_progress/census/general_focus.ipynb
+++ b/in_progress/census/general_focus.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "4         0.4           7.7  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "2673           1.6         0.0          15.1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -1259,7 +1259,7 @@
        "597         0.0          14.2  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,14 +1282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows removed: 691\n",
+      "Number of rows removed: 690\n",
       "Income             410\n",
       "IncomeErr          410\n",
       "IncomePerCap        50\n",
@@ -1625,14 +1625,13 @@
        "1298         51.6        13.0          35.3         0.0          26.1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "before_N = len(tract)\n",
-    "tract = tract.drop(tract.TotalPop.isnull())\n",
     "tract = tract.drop(tract[tract.TotalPop == 0].index)\n",
     "after_N = len(tract)\n",
     "print(\"Number of rows removed:\", before_N - after_N)\n",
@@ -1654,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2678,13 +2677,121 @@
        "67778           0.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tract.sort_values(\"TotalPop\").head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The nation as a whole\n",
+    "\n",
+    "I include both Tract and County data for the dual purpose of validating that they are equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tract data</th>\n",
+       "      <th>County data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Citizens</th>\n",
+       "      <td>225190931</td>\n",
+       "      <td>225190931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Counties</th>\n",
+       "      <td>3220</td>\n",
+       "      <td>3220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Employed</th>\n",
+       "      <td>146811129</td>\n",
+       "      <td>146811129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Men</th>\n",
+       "      <td>157448140</td>\n",
+       "      <td>157448140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Population</th>\n",
+       "      <td>320098094</td>\n",
+       "      <td>320098094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>States</th>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Women</th>\n",
+       "      <td>162649954</td>\n",
+       "      <td>162649954</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Tract data  County data\n",
+       "Citizens     225190931    225190931\n",
+       "Counties          3220         3220\n",
+       "Employed     146811129    146811129\n",
+       "Men          157448140    157448140\n",
+       "Population   320098094    320098094\n",
+       "States              52           52\n",
+       "Women        162649954    162649954"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({\n",
+    "    \"Population\": [tract.TotalPop.sum(), county.TotalPop.sum()],\n",
+    "    \"Women\": [tract.Women.sum(), county.Women.sum()],\n",
+    "    \"Men\": [tract.Men.sum(), county.Men.sum()],\n",
+    "    \"Citizens\": [tract.Citizen.sum(), county.Citizen.sum()],\n",
+    "    \"States\": [len(tract.State.unique()), len(county.State.unique())],\n",
+    "    \"Counties\": [len(tract.groupby([\"State\", \"County\"])), len(county.groupby([\"State\", \"County\"]))],\n",
+    "    \"Employed\": [tract.Employed.sum(), county.Employed.sum()],\n",
+    "    \"GDP\": [(tract.IncomePerCap * tract.TotalPop)]\n",
+    "}, index=[\"Tract data\", \"County data\"]).transpose()"
    ]
   },
   {
