started styling to Python print statements

--- a/in_progress/census/state_focus.ipynb
+++ b/in_progress/census/state_focus.ipynb
@@ -46,12 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plotting helper function"
+    "### Styling helpers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,20 @@
     "            ax.text(0.8,i,v,color='k',fontsize=14)\n",
     "    ylabel != None and fig.set(ylabel=ylabel)\n",
     "    xlabel != None and fig.set(xlabel=xlabel)\n",
-    "    title != None and fig.set(title=title)"
+    "    title != None and fig.set(title=title)\n",
+    "    \n",
+    "### Used to style Python print statements\n",
+    "class color:\n",
+    "   PURPLE = '\\033[95m'\n",
+    "   CYAN = '\\033[96m'\n",
+    "   DARKCYAN = '\\033[36m'\n",
+    "   BLUE = '\\033[94m'\n",
+    "   GREEN = '\\033[92m'\n",
+    "   YELLOW = '\\033[93m'\n",
+    "   RED = '\\033[91m'\n",
+    "   BOLD = '\\033[1m'\n",
+    "   UNDERLINE = '\\033[4m'\n",
+    "   END = '\\033[0m'"
    ]
   },
   {
@@ -452,6 +465,37 @@
    "source": [
     "dup_counties = census.groupby(\"County\").apply(len).sort_values(ascending=False)\n",
     "dup_counties.where(dup_counties > 1).dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Population min, max, and avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The least populated state is: \u001b[1m California \u001b[0m with a population of: \u001b[1m 38421464 \u001b[0m\n",
+      "The least populated state is: \u001b[1m Wyoming \u001b[0m with a population of: \u001b[1m 579679 \u001b[0m\n",
+      "The median number of people living in a State is: \u001b[1m 4168293 \u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "state_pop = census.groupby(\"State\").TotalPop.sum()\n",
+    "print(\"The least populated state is:\", color.BOLD, np.argmax(state_pop), color.END,\n",
+    "      \"with a population of:\", color.BOLD, max(state_pop), color.END)\n",
+    "print(\"The least populated state is:\", color.BOLD, np.argmin(state_pop), color.END,\n",
+    "      \"with a population of:\", color.BOLD, min(state_pop), color.END)\n",
+    "print(\"The median number of people living in a State is:\", color.BOLD, int(state_pop.median()), color.END)"
    ]
   },
   {
