looking at state county tract

--- a/in_progress/census/state_focus.ipynb
+++ b/in_progress/census/state_focus.ipynb
@@ -46,12 +46,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Styling helpers"
+    "### Styling helpers\n",
+    "\n",
+    "I found out about the color class from this [Stack Overflow question](https://stackoverflow.com/questions/8924173/how-do-i-print-bold-text-in-python) (thanks [Boubakr](https://stackoverflow.com/users/1770999/boubakr)!)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -355,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +366,7 @@
        "3220"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -457,7 +459,7 @@
        "Length: 431, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,37 +467,6 @@
    "source": [
     "dup_counties = census.groupby(\"County\").apply(len).sort_values(ascending=False)\n",
     "dup_counties.where(dup_counties > 1).dropna()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Population min, max, and avg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The least populated state is: \u001b[1m California \u001b[0m with a population of: \u001b[1m 38421464 \u001b[0m\n",
-      "The least populated state is: \u001b[1m Wyoming \u001b[0m with a population of: \u001b[1m 579679 \u001b[0m\n",
-      "The median number of people living in a State is: \u001b[1m 4168293 \u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "state_pop = census.groupby(\"State\").TotalPop.sum()\n",
-    "print(\"The least populated state is:\", color.BOLD, np.argmax(state_pop), color.END,\n",
-    "      \"with a population of:\", color.BOLD, max(state_pop), color.END)\n",
-    "print(\"The least populated state is:\", color.BOLD, np.argmin(state_pop), color.END,\n",
-    "      \"with a population of:\", color.BOLD, min(state_pop), color.END)\n",
-    "print(\"The median number of people living in a State is:\", color.BOLD, int(state_pop.median()), color.END)"
    ]
   },
   {
@@ -878,6 +849,60 @@
     "pretty_bar(commute.head(20), axarr[0], title=\"Greatest commute times\")\n",
     "pretty_bar(commute.tail(20), axarr[1], title=\"Lowest commute times\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Work type by County"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "careers = ['Professional', 'Service', 'Office', 'Construction', 'Production']\n",
+    "sectors = ['Employed', 'PrivateWork', 'PublicWork', 'SelfEmployed', 'FamilyWork']\n",
+    "\n",
+    "career = careers[0]\n",
+    "sector = sectors[0]\n",
+    "\n",
+    "fig, axarr = plt.subplots(2, 2, figsize=(14,12))\n",
+    "fig.subplots_adjust(wspace=0.5)\n",
+    "\n",
+    "car = census.groupby([\"State\", \"County\"])[career].median().sort_values(ascending=False)\n",
+    "sec = census.groupby([\"State\", \"County\"])[sector].median().sort_values(ascending=False)\n",
+    "\n",
+    "pretty_bar(car.head(10), axarr[0][0], title=\"Highest fraction of people in {}\".format(career))\n",
+    "pretty_bar(car.tail(10), axarr[0][1], title=\"Lowest fraction of people in {}\".format(career), ylabel=\"\")\n",
+    "\n",
+    "pretty_bar(sec.head(10), axarr[1][0], title=\"Highest in Child Poverty\")\n",
+    "pretty_bar(sec.tail(10), axarr[1][1], title=\"Lowest in Child Poverty\", ylabel=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
