test for markdown

--- a/in_progress/census/general_focus.ipynb
+++ b/in_progress/census/general_focus.ipynb
@@ -4,6 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<button onclick=\"document.getElementById('hello').hidden=true\">Click me</button>\n",
+    "\n",
+    "\n",
+    "<div id=\"hello\" class=\"\">Hello!</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    ">! Spoiler text\n",
+    ">! Spoiler text\n",
+    ">! Spoiler text\n",
+    ">! Spoiler text\n",
+    "\n",
+    "    >! asd\n",
+    "\n",
+    "asdasdas\n",
+    "\n",
+    "\n",
+    "> This is a block quote,\n",
+    "> using current syntax\n",
+    "\n",
+    "..but, the following is a spoiler!\n",
+    "\n",
+    "! This is a spoiler,\n",
+    "! using a new syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Imports"
    ]
   },
