test failed wanted to hide and display images in markdown

--- a/in_progress/census/general_focus.ipynb
+++ b/in_progress/census/general_focus.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<button onclick=\"document.getElementById('hello').hidden=true\">Click me</button>\n",
+    "<button onclick=\"console.log('hello')\">Click me</button>\n",
     "\n",
     "\n",
     "<div id=\"hello\" class=\"\">Hello!</div>"
