formatted up arrows better

--- a/in_progress/census/state_focus.ipynb
+++ b/in_progress/census/state_focus.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "8.) [Criticism](#criticism)\n",
+    "\n",
+    "<a name=\"intro\"></a>\n",
+    "# [(^top)](#toc) Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Analysis only\n",
     "\n",
     "This dataset doesn't have a target column.  All this is just fun data exploration!\n",
