draft of general is in full

--- a/in_progress/census/state_focus.ipynb
+++ b/in_progress/census/state_focus.ipynb
@@ -28,12 +28,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Styling helper"
+    "### Styling helpers\n",
+    "\n",
+    "I found out about the color class from this [Stack Overflow question](https://stackoverflow.com/questions/8924173/how-do-i-print-bold-text-in-python) (thanks [Boubakr](https://stackoverflow.com/users/1770999/boubakr)!)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +50,20 @@
     "            ax.text(0.8,i,v,color='k',fontsize=14)\n",
     "    ylabel != None and fig.set(ylabel=ylabel)\n",
     "    xlabel != None and fig.set(xlabel=xlabel)\n",
-    "    title != None and fig.set(title=title)"
+    "    title != None and fig.set(title=title)\n",
+    "    \n",
+    "### Used to style Python print statements\n",
+    "class color:\n",
+    "   PURPLE = '\\033[95m'\n",
+    "   CYAN = '\\033[96m'\n",
+    "   DARKCYAN = '\\033[36m'\n",
+    "   BLUE = '\\033[94m'\n",
+    "   GREEN = '\\033[92m'\n",
+    "   YELLOW = '\\033[93m'\n",
+    "   RED = '\\033[91m'\n",
+    "   BOLD = '\\033[1m'\n",
+    "   UNDERLINE = '\\033[4m'\n",
+    "   END = '\\033[0m'"
    ]
   },
   {
@@ -287,15 +302,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The million and one dollar question\n",
-    "\n",
-    "How many states are there?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -312,7 +318,8 @@
     }
    ],
    "source": [
-    "len(census.groupby(\"State\"))"
+    "# The million and one dollar question... How many states are there?\n",
+    "print(len(census.groupby(\"State\"))"
    ]
   },
   {
