--- a/in_progress/census/general_focus.ipynb
+++ b/in_progress/census/general_focus.ipynb
@@ -2911,9 +2911,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Huge range of population in Tracts, let's see a distribution before moving on\n",
-    "\n",
-    "NOTE: This would be a good time to do a violin plot, box plot.  Also maybe State and County can fit here too?"
+    "### Huge range of population in Tracts, let's see a distribution before moving on"
    ]
   },
   {
@@ -3284,215 +3282,6 @@
    "source": [
     "df_3 = census.drop(\"CensusTract\", axis=1).corr().tail(13)\n",
     "corr_map(df_3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CensusTract</th>\n",
-       "      <th>State</th>\n",
-       "      <th>County</th>\n",
-       "      <th>TotalPop</th>\n",
-       "      <th>Men</th>\n",
-       "      <th>Women</th>\n",
-       "      <th>Hispanic</th>\n",
-       "      <th>White</th>\n",
-       "      <th>Black</th>\n",
-       "      <th>Native</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Walk</th>\n",
-       "      <th>OtherTransp</th>\n",
-       "      <th>WorkAtHome</th>\n",
-       "      <th>MeanCommute</th>\n",
-       "      <th>Employed</th>\n",
-       "      <th>PrivateWork</th>\n",
-       "      <th>PublicWork</th>\n",
-       "      <th>SelfEmployed</th>\n",
-       "      <th>FamilyWork</th>\n",
-       "      <th>Unemployment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001020100</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>1948</td>\n",
-       "      <td>940</td>\n",
-       "      <td>1008</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>87.4</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>943</td>\n",
-       "      <td>77.1</td>\n",
-       "      <td>18.3</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1001020200</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>2156</td>\n",
-       "      <td>1059</td>\n",
-       "      <td>1097</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>40.4</td>\n",
-       "      <td>53.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>753</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>16.9</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1001020300</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>2968</td>\n",
-       "      <td>1364</td>\n",
-       "      <td>1604</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>74.5</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>19.6</td>\n",
-       "      <td>1373</td>\n",
-       "      <td>64.1</td>\n",
-       "      <td>23.6</td>\n",
-       "      <td>12.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1001020400</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>4423</td>\n",
-       "      <td>2172</td>\n",
-       "      <td>2251</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>82.8</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>25.3</td>\n",
-       "      <td>1782</td>\n",
-       "      <td>75.7</td>\n",
-       "      <td>21.2</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1001020500</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>10763</td>\n",
-       "      <td>4922</td>\n",
-       "      <td>5841</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>68.5</td>\n",
-       "      <td>24.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>24.8</td>\n",
-       "      <td>5037</td>\n",
-       "      <td>67.1</td>\n",
-       "      <td>27.6</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   CensusTract    State   County  TotalPop   Men  Women  Hispanic  White  \\\n",
-       "0   1001020100  Alabama  Autauga      1948   940   1008       0.9   87.4   \n",
-       "1   1001020200  Alabama  Autauga      2156  1059   1097       0.8   40.4   \n",
-       "2   1001020300  Alabama  Autauga      2968  1364   1604       0.0   74.5   \n",
-       "3   1001020400  Alabama  Autauga      4423  2172   2251      10.5   82.8   \n",
-       "4   1001020500  Alabama  Autauga     10763  4922   5841       0.7   68.5   \n",
-       "\n",
-       "   Black  Native      ...       Walk  OtherTransp  WorkAtHome  MeanCommute  \\\n",
-       "0    7.7     0.3      ...        0.5          2.3         2.1         25.0   \n",
-       "1   53.3     0.0      ...        0.0          0.7         0.0         23.4   \n",
-       "2   18.6     0.5      ...        0.0          0.0         2.5         19.6   \n",
-       "3    3.7     1.6      ...        0.0          2.6         1.6         25.3   \n",
-       "4   24.8     0.0      ...        0.0          0.6         0.9         24.8   \n",
-       "\n",
-       "   Employed  PrivateWork  PublicWork  SelfEmployed  FamilyWork  Unemployment  \n",
-       "0       943         77.1        18.3           4.6         0.0           5.4  \n",
-       "1       753         77.0        16.9           6.1         0.0          13.3  \n",
-       "2      1373         64.1        23.6          12.3         0.0           6.2  \n",
-       "3      1782         75.7        21.2           3.1         0.0          10.8  \n",
-       "4      5037         67.1        27.6           5.3         0.0           4.2  \n",
-       "\n",
-       "[5 rows x 37 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "census.head()"
    ]
   },
   {
